# Cluedo

./: Affichage.cpp  AutresFonctions.cpp  Bouton.cpp  CMakeLists.txt  Carte.cpp  Carte.h  Case.cpp  Clavier.cpp  Composant.cpp  Fonction.h  Joueur.cpp  Map.cpp  Parametre.cpp  Proposition.cpp  README.md  RegleDuJeu.cpp  Souris.cpp  bouton.cpp  bouton.h  main.cpp  perso.cpp  perso.h
PointH/: AutresFonctions.h  Bouton.h  Carte.h  Case.h  Composant.h  IncludeAndDefine.h  Joueur.h  Map.h  Parametre.h  Proposition.h  RegleDuJeu.h
PointTXT/: Identifiant.txt  InitialisationMap.txt  InitialisationNomCarte.txt
